[package]
name = "neopixel-uart"
version = "0.1.0"
authors = ["Noah Huesser <admin@yatekii.ch>"]
edition = "2018"

[dependencies]
cortex-m = "*"
generic-array = "*"
typenum = "*"
lazy_static = "*"

[dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies.stm32f0]
features = ["stm32f0x2", "rt"]
version = "*"